--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "nodeunit": "0.9.x",
     "regenerate": "1.2.x",
     "results-interpreter": "~1.0.0",
-    "sinon": "1.12.x",
+    "sinon": "~15",
     "test262-stream": "~1.3.0",
     "unicode-11.0.0": "0.7.x",
     "unicode-5.2.0": "^0.7.5"
