--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "async": "~2.1.2",
     "jscs": "1.11.x",
     "mock-stdin": "0.3.x",
-    "nodeunit": "0.9.x",
+    "nodeunit": "0.11.3",
     "regenerate": "1.2.x",
     "results-interpreter": "~1.0.0",
     "sinon": "~15",
