--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cli": "~1.0.0",
     "lodash": "~4.17.21",
     "minimatch": "~3.0.2",
-    "strip-json-comments": "1.0.x"
+    "strip-json-comments": "~3"
   },
   "devDependencies": {
     "async": "~2.1.2",
