--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jscs": "1.11.x",
     "mock-stdin": "0.3.x",
     "nodeunit": "0.11.3",
-    "regenerate": "1.2.x",
+    "regenerate": "1.4.2",
     "results-interpreter": "~1.0.0",
     "sinon": "~15",
     "test262-stream": "~1.3.0",
